fix in toolbar page for z-index

--- a/src/css/components.styl
+++ b/src/css/components.styl
@@ -92,14 +92,14 @@ hr {
 
 .toolbar-top {
   position: fixed;
-  z-index: 2;
+  z-index: 12;
   top: 0px;
   left: 0px;
 }
 
 .toolbar-bottom {
   position: absolute;
-  z-index: 2;
+  z-index: 12;
   bottom: 0px;
   left: 0px;
 }
